updated to use secrets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@
   uses: zinh/ftp-uploader-action@v0.5
   with:
     ftpHostname: server24.hostonnet.com
-    ftpUsername: edudemohon
-    ftpPassword: ukaWFoohub9o
+    ftpUsername: ${{ secrets.FTP_USERNAME }}
+    ftpPassword: ${{ secrets.FTP_PASSWORD }}
     src: .
     dest: /public_html/
     dryRun: false
