--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,23 @@
-- name: FTP Uploader
-  uses: zinh/ftp-uploader-action@v0.5
-  with:
-    ftpHostname: server24.hostonnet.com
-    ftpUsername: ${{ secrets.FTP_USERNAME }}
-    ftpPassword: ${{ secrets.FTP_PASSWORD }}
-    src: .
-    dest: /public_html/
-    dryRun: false
+name: FTP Deployment
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: FTP Uploader
+        uses: zinh/ftp-uploader-action@v0.5
+        with:
+          ftpHostname: server24.hostonnet.com
+          ftpUsername: ${{ secrets.FTP_USERNAME }}
+          ftpPassword: ${{ secrets.FTP_PASSWORD }}
+          src: .
+          dest: /public_html/
+          dryRun: false
