--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: FTP Uploader
-        uses: genietim/ftp-action@releases/v4
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          host: server24.hostonnet.com
-          user: ${{ secrets.FTP_USERNAME }}
+          server: server24.hostonnet.com
+          port: 21
+          username: edudemohon
           password: ${{ secrets.FTP_PASSWORD }}
-          localDir: "dist"
-          remoteDir: /public_html/
+          server-dir: "/public_html/"
